syntax = "proto3";

package meter;

option java_package = "com.proto.meter";
option java_multiple_files = true;

message Metering{
  string _Id = 1;
  string room_number = 2;
  string utilities_type = 3;
  string monthAndYear = 4;
  double consumption = 5;
  double sum = 6;
  int32 used_unit = 7;
}
message MeterRequest {
  Metering metering = 1;
}
message MeterResponse {
  string result = 1;
}
message MeterRequestForAll {

}
message MeterResponseForAll {
  Metering metering = 1;
}
service MeterService {
  // Unary
  rpc Meter(MeterRequest) returns (MeterResponse){};
  rpc MeterForAll(MeterRequestForAll) returns (MeterResponseForAll){};
}
//service MeterServiceForAll {
//  // Unary
//  rpc MeterForAll(MeterRequestForAll) returns (MeterResponseForAll){};
//}